crates/pg_syntax/tests/snapshots/postgres_regress/join@151.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: DELETE FROM t3 USING t3 t3_other WHERE t3.x = t3_other.x AND t3.y = t3_other.y;
---
DeleteStmt@0..79
  DeleteP@0..6 "DELETE"
  Whitespace@6..7 " "
  From@7..11 "FROM"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "t3"
  Whitespace@14..15 " "
  Using@15..20 "USING"
  Whitespace@20..21 " "
  RangeVar@21..32
    Ident@21..23 "t3"
    Whitespace@23..24 " "
    Alias@24..32
      Ident@24..32 "t3_other"
  Whitespace@32..33 " "
  Where@33..38 "WHERE"
  Whitespace@38..39 " "
  BoolExpr@39..78
    AExpr@39..56
      ColumnRef@39..43
        Ident@39..41 "t3"
        Ascii46@41..42 "."
        Ident@42..43 "x"
      Whitespace@43..44 " "
      Ascii61@44..45 "="
      Whitespace@45..46 " "
      ColumnRef@46..56
        Ident@46..54 "t3_other"
        Ascii46@54..55 "."
        Ident@55..56 "x"
    Whitespace@56..57 " "
    And@57..60 "AND"
    Whitespace@60..61 " "
    AExpr@61..78
      ColumnRef@61..65
        Ident@61..63 "t3"
        Ascii46@63..64 "."
        Ident@64..65 "y"
      Whitespace@65..66 " "
      Ascii61@66..67 "="
      Whitespace@67..68 " "
      ColumnRef@68..78
        Ident@68..76 "t3_other"
        Ascii46@76..77 "."
        Ident@77..78 "y"
  Ascii59@78..79 ";"

