crates/pg_syntax/tests/snapshots/postgres_regress/join@154.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into t2a values (200, 2001);"
---
InsertStmt@0..35
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "t2a"
  Whitespace@15..16 " "
  SelectStmt@16..33
    Values@16..22 "values"
    Whitespace@22..23 " "
    Ascii40@23..24 "("
    List@24..33
      AConst@24..27
        Iconst@24..27 "200"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      AConst@29..33
        Iconst@29..33 "2001"
  Ascii41@33..34 ")"
  Ascii59@34..35 ";"

