crates/pg_syntax/tests/snapshots/postgres_regress/join@155.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select * from t1 left join t2 on (t1.a = t2.a);
---
SelectStmt@0..47
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  JoinExpr@14..45
    RangeVar@14..16
      Ident@14..16 "t1"
    Whitespace@16..17 " "
    Left@17..21 "left"
    Whitespace@21..22 " "
    Join@22..26 "join"
    Whitespace@26..27 " "
    RangeVar@27..29
      Ident@27..29 "t2"
    Whitespace@29..30 " "
    On@30..32 "on"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    AExpr@34..45
      ColumnRef@34..38
        Ident@34..36 "t1"
        Ascii46@36..37 "."
        Ident@37..38 "a"
      Whitespace@38..39 " "
      Ascii61@39..40 "="
      Whitespace@40..41 " "
      ColumnRef@41..45
        Ident@41..43 "t2"
        Ascii46@43..44 "."
        Ident@44..45 "a"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

