crates/pg_syntax/tests/snapshots/postgres_regress/join@163.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO tt1 VALUES (1, 11);"
---
InsertStmt@0..31
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "tt1"
  Whitespace@15..16 " "
  SelectStmt@16..29
    Values@16..22 "VALUES"
    Whitespace@22..23 " "
    Ascii40@23..24 "("
    List@24..29
      AConst@24..25
        Iconst@24..25 "1"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..29
        Iconst@27..29 "11"
  Ascii41@29..30 ")"
  Ascii59@30..31 ";"

