crates/pg_syntax/tests/snapshots/postgres_regress/join@164.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO tt1 VALUES (2, NULL);"
---
InsertStmt@0..33
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "tt1"
  Whitespace@15..16 " "
  SelectStmt@16..31
    Values@16..22 "VALUES"
    Whitespace@22..23 " "
    Ascii40@23..24 "("
    List@24..31
      AConst@24..25
        Iconst@24..25 "2"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..31
        NullP@27..31 "NULL"
  Ascii41@31..32 ")"
  Ascii59@32..33 ";"

