crates/pg_syntax/tests/snapshots/postgres_regress/join@167.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO tt2 VALUES (22, 11);"
---
InsertStmt@0..32
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "tt2"
  Whitespace@15..16 " "
  SelectStmt@16..30
    Values@16..22 "VALUES"
    Whitespace@22..23 " "
    Ascii40@23..24 "("
    List@24..30
      AConst@24..26
        Iconst@24..26 "22"
      Ascii44@26..27 ","
      Whitespace@27..28 " "
      AConst@28..30
        Iconst@28..30 "11"
  Ascii41@30..31 ")"
  Ascii59@31..32 ";"

