crates/pg_syntax/tests/snapshots/postgres_regress/join@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO J2_TBL VALUES (2, 4);"
---
InsertStmt@0..33
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "J2_TBL"
  Whitespace@18..19 " "
  SelectStmt@19..31
    Values@19..25 "VALUES"
    Whitespace@25..26 " "
    Ascii40@26..27 "("
    List@27..31
      AConst@27..28
        Iconst@27..28 "2"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..31
        Iconst@30..31 "4"
  Ascii41@31..32 ")"
  Ascii59@32..33 ";"

